# linker

./: .gitmodules  CMakeLists.txt  PortalMap.py  README.md  linker  portals.conf  pyproject.toml
src/linkermc/: PortalMap.py  dimension.py  portal.py  search_region.py
src/linkermc/importworld/: bindings.cpp  main.cpp
tests/: test_portal_link.py
